syntax = "proto3";

option java_multiple_files= true;
option java_package = "com.nasr.grpcclient";
option java_outer_classname="UserProto";

service UserService{
  rpc getUserById(GetUserRequest) returns (GetUserResponse);
}
message GetUserRequest{
  int64 id =1;
}
message GetUserResponse{
  int64 id =1;
  string firstName=2;
  string lastName=3;
  string nationalCode=4;
}